# mctracer

./: .gitignore  .travis.yml  AbsorptionProperties.cpp  AbsorptionProperties.h  Annulus.h  ApertureCamera.cpp  ApertureCamera.h  BiConvexLens.cpp  BiConvexLens.h  BiConvexLensHexBound.cpp  BiConvexLensHexBound.h  CMakeLists.txt  CMakeLists.txt~  CameraDevice.cpp  CameraDevice.h  CameraImage.cpp  CameraImage.h  CameraMan.cpp  CameraMan.h  CameraManForRotation.cpp  CameraManForRotation.h  CameraManForStereo3D.cpp  CameraManForStereo3D.h  CameraManForTranslation.cpp  CameraManForTranslation.h  CameraRay.cpp  CameraRay.h  CartesianFrame.cpp  CartesianFrame.h  Color.cpp  ColourProperties.cpp  ColourProperties.h  ConfigFileHandle.cpp  ConfigFileHandle.h  ConfigurationFactory.cpp  ConfigurationFactory.h  CsvHandler.cpp  CsvHandler.h  Cylinder.cpp  Cylinder.h  (+211 more)
Cameras/: ApertureCamera.cpp  ApertureCamera.h  CMakeLists.txt  CameraDevice.cpp  CameraDevice.h  CameraImage.cpp  CameraImage.h  CameraMan.cpp  CameraMan.h  CameraManForFieldOfView.cpp  CameraManForFieldOfView.h  CameraManForPosition.cpp  CameraManForPosition.h  CameraManForRotation.cpp  CameraManForRotation.h  CameraManForStereo3D.cpp  CameraManForStereo3D.h  CameraManForTranslation.cpp  CameraManForTranslation.h  CameraRay.cpp  CameraRay.h  FlyingCamera.cpp  FlyingCamera.h  FreeOrbitCamera.cpp  FreeOrbitCamera.h  PinHoleCamera.cpp  PinHoleCamera.h  SkyDome.cpp  SkyDome.h  SmartImage.cpp  SmartImage.h  VisualConfig.cpp  VisualConfig.h
Cameras/CameraMan/: CMakeLists.txt  CameraMan.h  CameraManForFieldOfView.cpp  CameraManForFieldOfView.h  CameraManForRotation.cpp  CameraManForRotation.h  CameraManForStereo3D.cpp  CameraManForStereo3D.h  CameraManForTranslation.cpp  CameraManForTranslation.h  CameraManVerbosity.cpp  CameraManVerbosity.h  (+6 more)
Core/: AbsorptionProperties.cpp  AbsorptionProperties.h  CMakeLists.txt  Color.cpp  Color.h  DistanceMeter.cpp  DistanceMeter.h  Frame.cpp  Frame.h  Frames.cpp  Frames.h  FresnelRefractionAndReflection.cpp  FresnelRefractionAndReflection.h  Histogram1.cpp  Histogram1D.cpp  Histogram1D.h  HomTra3.cpp  HomTra3.h  HomoTrafo3D.cpp  HomoTrafo3D.h  Intersection.cpp  Intersection.h  ListOfPropagations.cpp  ListOfPropagations.h  Numeric.cpp  Numeric.h  Photon.cpp  Photon.h  PhotonAndFrame.cpp  PhotonAndFrame.h  PhotonBunch.cpp  PhotonBunch.h  PhotonMcTruth.cpp  PhotonMcTruth.h  Photons.cpp  Photons.h  PhysicalConstants.h  PhysicalConstantsSI.h  Printable.h  PropagationConfig.cpp  (+56 more)
Geometry/: Annulus.cpp  Annulus.h  BiConvexLens.cpp  BiConvexLensHexBound.cpp  CMakeLists.txt  Cylinder.cpp  Cylinder.h  CylinderPrismZ.cpp  Disc.cpp  Disc.h  DualSphericalPrismZ.cpp  DualSphericalPrismZ.h  EllipticalCapRayIntersectionEquation.cpp  EllipticalCapRayIntersectionEquation.h  EllipticalCapWithHexagonalBound.cpp  EllipticalCapWithHexagonalBound.h  Geometry.h  GridNeighborhoodTopoligy.cpp  GridNeighborhoodTopoligy.h  HexGridAnnulus.cpp  HexGridAnnulus.h  HexGridFlower.cpp  HexPlane.cpp  HexPlane.h  HexagonalPrismZ.cpp  HexagonalPrismZ.h  Plane.cpp  Plane.h  PlaneDualSphericalBound.cpp  PlaneDualSphericalBound.h  Prism3D.cpp  Prism3D.h  PrismZ.h  QuadraticEquation.cpp  RectangularBox.cpp  RectangularBox.h  RectangularPrismZ.cpp  RectangularPrismZ.h  Sphere.cpp  Sphere.h  (+21 more)
LightFieldTelescope/: CMakeLists.txt  CalibIo.cpp  CalibIo.h  Calibration.cpp  Calibration.h  Config.cpp  Config.h  Factory.cpp  Factory.h  Geometry.cpp  Geometry.h  LensCalibration.cpp  LensCalibration.h  LightFieldTelescope.h  LightFieldTelescopeConfig.cpp  LightFieldTelescopeFactory.cpp  LightFieldTelescopeGeometry.cpp  NightSkyBackgroundLight.cpp  NightSkyBackgroundLight.h  NightSkyBackgroundLightInjector.cpp  NightSkyBackgroundLightInjector.h  Plenoscope.cpp  Plenoscope.h  Propagation.cpp  Propagation.h  Telescope.h  VisualInspection.cpp  VisualInspection.h
Plenoscope/: CMakeLists.txt  Config.cpp  Config.h  EventFormats.cpp  EventFormats.h  EventHeader.cpp  EventHeader.h  Factory.cpp  Factory.h  Geometry.cpp  Geometry.h  LensCalibration.cpp  LensCalibration.h  NightSkyBackgroundLight.cpp  NightSkyBackgroundLight.h  NightSkyBackgroundLightInjector.cpp  NightSkyBackgroundLightInjector.h  Plenoscope.h  Plenoscope2.cpp  Plenoscope2.h  PlenoscopeInScenery.h  PlenoscopeScenery.h  SimulationTruthHeader.cpp  SimulationTruthHeader.h  VisualInspection.cpp  VisualInspection.h  json_to_plenoscope.h  run_trigger_study.py  trigger_study.py
Scenery/: BiConvexLensHexBound.h  CMakeLists.txt  ColorMap.cpp  ColorMap.h  Cylinder.cpp  Cylinder.h  CylinderPrismZ.h  Detector.h  DetectorMap.cpp  DetectorMap.h  Disc.h  DualSphericalPrismZ.h  EllipticalCapWithHexagonalBound.h  FunctionMap.cpp  FunctionMap.h  Geometry.h  GridNeighborhoodTopoligy.h  HexGridFlower.h  Plane.h  PlaneDualSphericalBound.h  Prism3D.cpp  QuadraticEquation.h  RectangularBox.cpp  ResourceMap.h  Scenery.cpp  Scenery.h  SensorMap.cpp  SensorMap.h  Sphere.h  SphereCapWithHexagonalBound.cpp  SphereCapWithHexagonalBound.h  SphereCapWithRectangularBound.cpp  SphereCapWithRectangularBound.h  TrajectoryFactory.cpp  TrajectoryFactory.h  Triangle.cpp  Triangle.h  TwoSolutionSurfaceRayEquation.h  ZaxisCylinderRayIntersectionEquation.cpp  json_to_scenery.cpp  (+2 more)
Visual/: ApertureCamera.cpp  ApertureCamera.h  CMakeLists.txt  CameraDevice.cpp  CameraDevice.h  CameraImage.cpp  CameraImage.h  CameraRay.cpp  CameraRay.h  Config.cpp  Config.h  FlyingCamera.cpp  FlyingCamera.h  Image.cpp  Image.h  PinHoleCamera.cpp  PinHoleCamera.h  PixelCoordinate.cpp  PixelCoordinate.h  PortablePictureMap.cpp  PortablePixMap.cpp  PortablePixMap.h  Propagator.cpp  Propagator.h  SkyDome.cpp  SkyDome.h  Tracer.cpp  Tracer.h  VisualConfig.cpp  VisualConfig.h  thread_pool.cpp  thread_pool.h
Xml/: AttributeParser.h  BasicAttributes.cpp  BasicAttributes.h  CMakeLists.txt  Document.cpp  Document.h  Exceptions.h  Node.cpp  Node.h  Problem.cpp  Problem.h  Xml.h
plenoscope/: CMakeLists.txt  EventHeader.cpp  EventHeader.h  PlenoscopeInScenery.h  PlenoscopeScenery.h  SimulationTruthHeader.cpp  SimulationTruthHeader.h  json_to_plenoscope.h
(+1733 files in other folders)
