add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/SkyDome")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/CameraMan")
set(SOURCE
   	${SOURCE}
   	${CMAKE_CURRENT_SOURCE_DIR}/CameraDevice.cpp 
	${CMAKE_CURRENT_SOURCE_DIR}/PinHoleCamera.cpp 
	${CMAKE_CURRENT_SOURCE_DIR}/ApertureCamera.cpp 
	${CMAKE_CURRENT_SOURCE_DIR}/FreeOrbitCamera.cpp 
	${CMAKE_CURRENT_SOURCE_DIR}/CameraImage.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CameraRay.cpp
   	PARENT_SCOPE
)