add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Function")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Random")
set(SOURCE
   	${SOURCE}
   	${CMAKE_CURRENT_SOURCE_DIR}/Vector2D.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Vector3D.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Rotation3D.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/HomoTrafo3D.cpp	
	${CMAKE_CURRENT_SOURCE_DIR}/Intersection.cpp	
	${CMAKE_CURRENT_SOURCE_DIR}/Frame.cpp	
	${CMAKE_CURRENT_SOURCE_DIR}/SurfaceEntity.cpp	
	${CMAKE_CURRENT_SOURCE_DIR}/Ray.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/RayAndBoundingSphereInteraction.cpp	
	${CMAKE_CURRENT_SOURCE_DIR}/RayAndFrameInteraction.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/RayForPropagation.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/TracerSettings.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Photon.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/PhotonMcTruth.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Photons.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/PropagationEnvironment.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/FresnelRefractionAndReflection.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Color.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Histogram1D.cpp
   	PARENT_SCOPE
)