add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/function")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/random")
set(SOURCE
    ${SOURCE}
    ${CMAKE_CURRENT_SOURCE_DIR}/Vec2.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Vec3.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Rot3.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/HomTra3.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Intersection.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Frame.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Frames.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/SurfaceEntity.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Ray.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/RayAndFrame.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/RayForPropagation.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/PropagationConfig.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Photon.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/PhotonAndFrame.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Photons.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/FresnelRefractionAndReflection.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Color.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/SimulationTruth.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Histogram1D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/DistanceMeter.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/small_ball.cpp
    PARENT_SCOPE
)