add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Calibration")
set(SOURCE
   	${SOURCE}
   	${CMAKE_CURRENT_SOURCE_DIR}/Config.cpp
  	${CMAKE_CURRENT_SOURCE_DIR}/Geometry.cpp
  	${CMAKE_CURRENT_SOURCE_DIR}/Factory.cpp
  	${CMAKE_CURRENT_SOURCE_DIR}/LensCalibration.cpp
  	${CMAKE_CURRENT_SOURCE_DIR}/VisualInspection.cpp
  	${CMAKE_CURRENT_SOURCE_DIR}/NightSkyBackgroundLight.cpp
  	${CMAKE_CURRENT_SOURCE_DIR}/NightSkyBackgroundLightInjector.cpp
  	${CMAKE_CURRENT_SOURCE_DIR}/EventFormats.cpp
   	PARENT_SCOPE
)