add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/SegmentedReflector")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/primitive")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/geometry")
set(SOURCE
    ${SOURCE}
    ${CMAKE_CURRENT_SOURCE_DIR}/stereo_litography.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/TrajectoryFactory.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ColorMap.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/FunctionMap.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/SensorMap.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Scenery.cpp
    PARENT_SCOPE
)