add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/camera_operator")
set(SOURCE
    ${SOURCE}
    ${CMAKE_CURRENT_SOURCE_DIR}/CameraDevice.cpp 
    ${CMAKE_CURRENT_SOURCE_DIR}/PinHoleCamera.cpp 
    ${CMAKE_CURRENT_SOURCE_DIR}/ApertureCamera.cpp 
    ${CMAKE_CURRENT_SOURCE_DIR}/FlyingCamera.cpp 
    ${CMAKE_CURRENT_SOURCE_DIR}/Image.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/CameraRay.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Config.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/SkyDome.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Tracer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/PortablePixMap.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/PixelCoordinate.cpp
    PARENT_SCOPE
)