add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Calibration")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/LightFieldSensor")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/night_sky_background")
set(SOURCE
    ${SOURCE}
    ${CMAKE_CURRENT_SOURCE_DIR}/SimulationTruthHeader.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/EventHeader.cpp
    PARENT_SCOPE
)