add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/calibration")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/light_field_sensor")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/night_sky_background")
set(SOURCE
    ${SOURCE}
    ${CMAKE_CURRENT_SOURCE_DIR}/SimulationTruthHeader.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/EventHeader.cpp
    PARENT_SCOPE
)