add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/LensMaker")
set(SOURCE
   	${SOURCE}	
	${CMAKE_CURRENT_SOURCE_DIR}/XyPlaneRayIntersectionEquation.cpp 
	${CMAKE_CURRENT_SOURCE_DIR}/CylinderPrismZ.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/DualSphericalPrismZ.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/EllipticalCapRayIntersectionEquation.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/HexagonalPrismZ.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/HexGridAnnulus.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/HexGridFlower.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/QuadraticEquation.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/RectangularPrismZ.cpp	
	${CMAKE_CURRENT_SOURCE_DIR}/SphericalCapRayIntersectionEquation.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/SurfaceWithOuterPrismBound.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ZaxisCylinderRayIntersectionEquation.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/GridNeighborhoodTopoligy.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ThinLensEquation.cpp
   	PARENT_SCOPE
)